feat: login sso

--- a/backend/env.example
+++ b/backend/env.example
@@ -4,3 +4,16 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 # Định dạng: postgresql://USER:PASSWORD@HOST:PORT/DB_NAME
 # DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
+# OAuth Settings
+# Google OAuth
+# GOOGLE_OAUTH2_CLIENT_ID=your-google-client-id
+# GOOGLE_OAUTH2_CLIENT_SECRET=your-google-client-secret
+
+# Facebook OAuth
+# FACEBOOK_APP_ID=your-facebook-app-id
+# FACEBOOK_APP_SECRET=your-facebook-app-secret
+
+# GitHub OAuth
+# GITHUB_CLIENT_ID=your-github-client-id
+# GITHUB_CLIENT_SECRET=your-github-client-secret
+
