feat: docker add

--- a/backend/environment/.env_local
+++ b/backend/environment/.env_local
@@ -1,19 +1,19 @@
+# Backend Local Development Environment Variables
+# Sao chép file này thành .env_local trong thư mục backend/environment/
+
 DJANGO_SECRET_KEY=change-me
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-# Định dạng: postgresql://USER:PASSWORD@HOST:PORT/DB_NAME
-# DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
-# OAuth Settings
-# Google OAuth
+# Database Configuration
+# Nếu không có DATABASE_URL, sẽ sử dụng SQLite
+# DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tuswhole_dev
+
+# OAuth Settings (Optional)
 # GOOGLE_OAUTH2_CLIENT_ID=your-google-client-id
 # GOOGLE_OAUTH2_CLIENT_SECRET=your-google-client-secret
-
-# Facebook OAuth
 # FACEBOOK_APP_ID=your-facebook-app-id
 # FACEBOOK_APP_SECRET=your-facebook-app-secret
-
-# GitHub OAuth
 # GITHUB_CLIENT_ID=your-github-client-id
 # GITHUB_CLIENT_SECRET=your-github-client-secret
 
